--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ docs/.astro/
 # Swift Package Manager metadata (leave sources tracked)
 # Packages/
 # Package.resolved
+.swiftpm/xcode/xcshareddata/
